// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Initial Theme Selection > should default to a dark theme when terminal background is dark and no theme is set 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ > Select Theme                               Preview                                             │
│                                              ┌─────────────────────────────────────────────────┐ │
│    Light  |  Dark                            │                                                 │ │
│                                              │ 1 # function                                    │ │
│   1. ANSI Dark                               │ 2 def fibonacci(n):                             │ │
│   2. Atom One Dark                           │ 3     a, b = 0, 1                               │ │
│   3. Ayu Dark                                │ 4     for _ in range(n):                        │ │
│ ● 4. Default Dark                            │ 5         a, b = b, a + b                       │ │
│   5. Dracula Dark                            │ 6     return a                                  │ │
│   6. GitHub Dark                             │                                                 │ │
│   7. Holiday Dark                            │ 1 - print("Hello, " + name)                     │ │
│   8. Shades Of Purple Dark                   │ 1 + print(f"Hello, {name}!")                    │ │
│   9. Solarized Dark                          │                                                 │ │
│                                              └─────────────────────────────────────────────────┘ │
│                                                                                                  │
│ (Use Enter to select, Tab to configure scope, Esc to close)                                      │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`Initial Theme Selection > should default to a light theme when terminal background is light and no theme is set 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ > Select Theme                               Preview                                             │
│                                              ┌─────────────────────────────────────────────────┐ │
│    Light  |  Dark                            │                                                 │ │
│                                              │ 1 # function                                    │ │
│   1. ANSI Light                              │ 2 def fibonacci(n):                             │ │
│   2. Ayu Light                               │ 3     a, b = 0, 1                               │ │
│ ● 3. Default Light                           │ 4     for _ in range(n):                        │ │
│   4. GitHub Light                            │ 5         a, b = b, a + b                       │ │
│   5. Google Code Light                       │ 6     return a                                  │ │
│   6. Solarized Light                         │                                                 │ │
│   7. Xcode Light                             │ 1 - print("Hello, " + name)                     │ │
│                                              │ 1 + print(f"Hello, {name}!")                    │ │
│                                              │                                                 │ │
│                                              └─────────────────────────────────────────────────┘ │
│                                                                                                  │
│ (Use Enter to select, Tab to configure scope, Esc to close)                                      │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`Initial Theme Selection > should use the theme from settings even if terminal background suggests a different theme type 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ > Select Theme                               Preview                                             │
│                                              ┌─────────────────────────────────────────────────┐ │
│    Light  |  Dark                            │                                                 │ │
│                                              │ 1 # function                                    │ │
│   1. ANSI Dark                               │ 2 def fibonacci(n):                             │ │
│   2. Atom One Dark                           │ 3     a, b = 0, 1                               │ │
│   3. Ayu Dark                                │ 4     for _ in range(n):                        │ │
│ ● 4. Default Dark                            │ 5         a, b = b, a + b                       │ │
│   5. Dracula Dark                            │ 6     return a                                  │ │
│   6. GitHub Dark                             │                                                 │ │
│   7. Holiday Dark                            │ 1 - print("Hello, " + name)                     │ │
│   8. Shades Of Purple Dark                   │ 1 + print(f"Hello, {name}!")                    │ │
│   9. Solarized Dark                          │                                                 │ │
│                                              └─────────────────────────────────────────────────┘ │
│                                                                                                  │
│ (Use Enter to select, Tab to configure scope, Esc to close)                                      │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`ThemeDialog Snapshots > should render correctly in scope selector mode 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ > Apply To                                                                                       │
│ ● 1. User Settings                                                                               │
│   2. Workspace Settings                                                                          │
│   3. System Settings                                                                             │
│                                                                                                  │
│ (Use Enter to apply scope, Tab to select theme, Esc to close)                                    │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`ThemeDialog Snapshots > should render correctly in theme selection mode 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ > Select Theme                               Preview                                             │
│                                              ┌─────────────────────────────────────────────────┐ │
│    Light  |  Dark                            │                                                 │ │
│                                              │ 1 # function                                    │ │
│   1. ANSI Dark (Matches terminal)            │ 2 def fibonacci(n):                             │ │
│   2. Atom One Dark                           │ 3     a, b = 0, 1                               │ │
│   3. Ayu Dark                                │ 4     for _ in range(n):                        │ │
│ ● 4. Default Dark                            │ 5         a, b = b, a + b                       │ │
│   5. Dracula Dark                            │ 6     return a                                  │ │
│   6. GitHub Dark                             │                                                 │ │
│   7. Holiday Dark                            │ 1 - print("Hello, " + name)                     │ │
│   8. Shades Of Purple Dark                   │ 1 + print(f"Hello, {name}!")                    │ │
│   9. Solarized Dark                          │                                                 │ │
│                                              └─────────────────────────────────────────────────┘ │
│                                                                                                  │
│ (Use Enter to select, Tab to configure scope, Esc to close)                                      │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;
